third_party/rust/chromium_crates_io/vendor/zerocopy-v0_8/tests/ui-msrv/diagnostic-not-implemented-into-bytes.stderr
error[E0277]: the trait bound `NotZerocopy: zerocopy::IntoBytes` is not satisfied
  --> tests/ui-msrv/diagnostic-not-implemented-into-bytes.rs:18:24
   |
18 |     takes_into_bytes::<NotZerocopy>();
   |                        ^^^^^^^^^^^ the trait `zerocopy::IntoBytes` is not implemented for `NotZerocopy`
   |
note: required by a bound in `takes_into_bytes`
  --> tests/ui-msrv/diagnostic-not-implemented-into-bytes.rs:21:24
   |
21 | fn takes_into_bytes<T: IntoBytes>() {}
   |                        ^^^^^^^^^ required by this bound in `takes_into_bytes`
